--- a/apps/iot-land/src/app/app.component.html
+++ b/apps/iot-land/src/app/app.component.html
@@ -1,3 +1,5 @@
 <iot-land-navbar></iot-land-navbar>
-<router-outlet></router-outlet>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
 <iot-land-footer></iot-land-footer>
