Added device model and data service

--- a/apps/iot-land/src/app/pages/about/about.component.html
+++ b/apps/iot-land/src/app/pages/about/about.component.html
@@ -70,7 +70,7 @@
       <li>description: string</li>
       <li>installationDate: date</li>
       <li>inMaintenance: boolean</li>
-      <li>mips: number</li>
+      <li>mhz : number</li>
       <li>NetworkAddress: string</li>
     </ul>
   </div>
@@ -101,7 +101,7 @@
     <p>Measurement</p>
     <ul>
       <li>sensorId: number</li>
-      <li>name: string</li>
+      <li>timestamp: date</li>
       <li>rawValue: number</li>
       <li>normalizedValue: number</li>
       <li>batteryLevel: number</li>
