Added devices list UI

--- a/apps/iot-land/src/app/app.component.html
+++ b/apps/iot-land/src/app/app.component.html
@@ -1,5 +1,5 @@
 <iot-land-navbar></iot-land-navbar>
-<div class="container">
+<div class="container min-vh-100">
   <router-outlet></router-outlet>
 </div>
 <iot-land-footer></iot-land-footer>
