--- a/apps/iot-land/src/app/pages/home/home.component.html
+++ b/apps/iot-land/src/app/pages/home/home.component.html
@@ -15,7 +15,9 @@
       <a class="btn btn-primary btn-primary-color mb-5">Device aanmaken</a>
       <h2>Voor het eerst?</h2>
       <p>Kom meer te weten over IoT-land op de about pagina!</p>
-      <a class="btn btn-primary btn-primary-color">Kom meer te weten</a>
+      <a routerLink="/about" class="btn btn-primary btn-primary-color"
+        >Kom meer te weten</a
+      >
     </article>
   </div>
   <div class="col-6 justify-content-center d-flex">
