--- a/apps/iot-land/src/app/shared/navbar/navbar.component.html
+++ b/apps/iot-land/src/app/shared/navbar/navbar.component.html
@@ -29,16 +29,13 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            TODO-ENTITY-NAV
+            Management
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="#">TODO-ENTITY-OPTION 1</a>
+              <a class="dropdown-item" routerLink="devices">Devices</a>
             </li>
-            <li><hr class="dropdown-divider" /></li>
-            <li>
-              <a class="dropdown-item" href="#">TODO-ENTITY-OPTION 2</a>
-            </li>
+            <!-- <li><hr class="dropdown-divider" /></li> -->
           </ul>
         </li>
         <li class="nav-item">
