--- a/apps/iot-land/src/app/pages/management/devices/devices.component.html
+++ b/apps/iot-land/src/app/pages/management/devices/devices.component.html
@@ -1,5 +1,5 @@
 <div class="min-vh100">
-  <table class="table">
+  <table class="table mb-3">
     <thead>
       <tr>
         <th scope="col">ID</th>
@@ -27,4 +27,10 @@
       </tr>
     </tbody>
   </table>
+  <a
+    [routerLink]="['/devices/create']"
+    class="btn btn-primary btn-primary-color"
+  >
+    Device aanmaken
+  </a>
 </div>
