--- a/apps/iot-land/src/app/pages/home/home.component.html
+++ b/apps/iot-land/src/app/pages/home/home.component.html
@@ -12,7 +12,11 @@
         Direct naar het aanmaakscherm voor een nieuw device? Klik op de
         onderstaande button
       </p>
-      <a class="btn btn-primary btn-primary-color mb-5">Device aanmaken</a>
+      <a
+        routerLink="/devices/create"
+        class="btn btn-primary btn-primary-color mb-5"
+        >Device aanmaken</a
+      >
       <h2>Voor het eerst?</h2>
       <p>Kom meer te weten over IoT-land op de about pagina!</p>
       <a routerLink="/about" class="btn btn-primary btn-primary-color"
