Added create device functionality

--- a/apps/iot-land/src/app/pages/management/devices/devices.component.html
+++ b/apps/iot-land/src/app/pages/management/devices/devices.component.html
@@ -21,7 +21,7 @@
             {{ device.name }}
           </a>
         </td>
-        <td>{{ device.installationDate.toLocaleDateString("nl-NL") }}</td>
+        <td>{{ device.installationDate?.toLocaleDateString("nl-NL") }}</td>
         <td>{{ device.inMaintenance }}</td>
         <td>{{ device.networkAddress }}</td>
       </tr>
