--- a/apps/iot-land/src/app/pages/management/devices/details/details.component.html
+++ b/apps/iot-land/src/app/pages/management/devices/details/details.component.html
@@ -5,7 +5,7 @@
     <li><b>Processorsnelheid (MHz)</b>{{ device.mhz }}</li>
     <li>
       <b>Installatie datum:</b>
-      {{ device.installationDate.toLocaleDateString("nl-NL") }}
+      {{ device.installationDate?.toLocaleDateString("nl-NL") }}
     </li>
     <li><b>Is in onderhoud:</b> {{ device.inMaintenance }}</li>
     <li><b>Netwerkadres:</b> {{ device.networkAddress }}</li>
