Refactor: made device form reusable for create and edit

--- a/apps/iot-land/src/app/pages/management/devices/create/create.device.component.html
+++ b/apps/iot-land/src/app/pages/management/devices/create/create.device.component.html
@@ -1,55 +1,4 @@
-<div>
-  <form [formGroup]="form" (ngSubmit)="onSubmit()" id="deviceForm" class="m-2">
-    <div class="row py-2">
-      <div class="col">
-        <label for="name" class="form-label">Naam</label>
-        <input formControlName="name" type="text" class="form-control py-2" />
-      </div>
-      <div class="col">
-        <label class="form-label" for="inMaintenance">Is in onderhoud</label>
-        <select formControlName="inMaintenance" class="form-select">
-          <option value="">Kies een optie</option>
-          <option value="true">Ja</option>
-          <option value="false">Nee</option>
-        </select>
-      </div>
-    </div>
-    <div class="row py-2">
-      <div class="col">
-        <label for="installationDate" class="form-label"
-          >Installatiedatum</label
-        >
-        <input
-          formControlName="installationDate"
-          type="date"
-          class="form-control py-2"
-        />
-      </div>
-      <div class="col">
-        <label for="mhz" class="form-label">Processorsnelheid (MHz)</label>
-        <input formControlName="mhz" type="number" class="form-control py-2" />
-      </div>
-    </div>
-    <div class="py-2">
-      <label for="description" class="form-label">Beschrijving</label>
-      <textarea
-        formControlName="description"
-        form="deviceForm"
-        for="description"
-        class="form-control"
-        placeholder="Algemene beschrijving van device "
-      ></textarea>
-    </div>
-    <div class="col">
-      <label for="networkAddress" class="form-label">Netwerkadres</label>
-      <input
-        formControlName="networkAddress"
-        type="text"
-        class="form-control py-2"
-      />
-    </div>
-    <button type="submit" class="btn btn-primary btn-primary-color mt-3">
-      Aanmaken
-    </button>
-  </form>
-</div>
+<iot-land-device-form
+  [device]="device"
+  (deviceFormSubmit)="createDevice($event)"
+></iot-land-device-form>
