--- a/apps/iot-land/src/app/shared/forms/device.form/device.form.component.html
+++ b/apps/iot-land/src/app/shared/forms/device.form/device.form.component.html
@@ -49,7 +49,7 @@
       />
     </div>
     <button type="submit" class="btn btn-primary btn-primary-color mt-3">
-      Aanmaken
+      Indienen
     </button>
   </form>
 </div>
