Added device functionality

--- a/apps/iot-land/src/app/pages/management/devices/devices.component.html
+++ b/apps/iot-land/src/app/pages/management/devices/devices.component.html
@@ -32,7 +32,7 @@
           /></a>
         </td>
         <td>
-          <a routerLink="/home">
+          <a [routerLink]="[device.id, 'delete']">
             <img src="../../assets/images/delete-icon.svg" />
           </a>
         </td>
