About page update

--- a/apps/iot-land/src/app/shared/forms/device.form/device.form.component.html
+++ b/apps/iot-land/src/app/shared/forms/device.form/device.form.component.html
@@ -1,4 +1,5 @@
 <div>
+  <h1>Device formulier</h1>
   <form [formGroup]="form" (ngSubmit)="onSubmit()" id="deviceForm" class="m-2">
     <div class="row py-2">
       <div class="col">
