--- a/apps/iot-land/src/app/shared/navbar/navbar.component.html
+++ b/apps/iot-land/src/app/shared/navbar/navbar.component.html
@@ -33,9 +33,12 @@
           </a>
           <ul class="dropdown-menu">
             <li>
+              <a class="dropdown-item" routerLink="facilities">Facilities</a>
+            </li>
+            <li><hr class="dropdown-divider" /></li>
+            <li>
               <a class="dropdown-item" routerLink="devices">Devices</a>
             </li>
-            <!-- <li><hr class="dropdown-divider" /></li> -->
           </ul>
         </li>
         <li class="nav-item">
