--- a/apps/iot-land/src/app/pages/management/device/details/details.device.component.html
+++ b/apps/iot-land/src/app/pages/management/device/details/details.device.component.html
@@ -1,15 +1,27 @@
 <div *ngIf="device">
   <h1>{{ device.name }}</h1>
-  <ul>
-    <li><b>Id:</b> {{ device.id }}</li>
-    <li><b>Processorsnelheid (MHz)</b>{{ device.mhz }}</li>
-    <li>
-      <b>Installatie datum:</b>
-      {{ device.installationDate?.toLocaleDateString("nl-NL") }}
-    </li>
-    <li><b>Is in onderhoud:</b> {{ device.inMaintenance }}</li>
-    <li><b>Netwerkadres:</b> {{ device.networkAddress }}</li>
-  </ul>
+  <table style="width: 30%" class="table table-sm">
+    <tr>
+      <th scope="col">Id</th>
+      <td>{{ device.id }}</td>
+    </tr>
+    <tr>
+      <th scope="col">Processorsnelheid (MHz)</th>
+      <td>{{ device.mhz }}</td>
+    </tr>
+    <tr>
+      <th scope="col">Installatiedatum</th>
+      <td>{{ device.installationDate?.toLocaleDateString("nl-NL") }}</td>
+    </tr>
+    <tr>
+      <th scope="col">Is in onderhoud</th>
+      <td>{{ device.inMaintenance }}</td>
+    </tr>
+    <tr>
+      <th scope="col">Netwerkadres</th>
+      <td>{{ device.networkAddress }}</td>
+    </tr>
+  </table>
   <div>
     <p>
       {{ device.description }}
