--- a/apps/iot-land/src/app/pages/about/about.component.html
+++ b/apps/iot-land/src/app/pages/about/about.component.html
@@ -155,7 +155,39 @@
             Als gebruiker wil ik mijn eigen devices kunnen bewerken en
             verwijderen, zodat ik mijn informatie up-to-date kan houden.
           </td>
-          <td>Navigatie via detailpagina device of per URL</td>
+          <td>Navigatie overzicht devices of per URL</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>
+            Als gebruiker wil ik een overzicht van facilities kunnen raadplegen,
+            zodat ik mijn facilities gemakkelijk kan vinden.
+          </td>
+          <td>Overzicht is een tabel.</td>
+        </tr>
+        <tr>
+          <td>6</td>
+          <td>
+            Als gebruiker wil ik kunnen navigeren naar de detailpagina van een
+            facilities zodat ik alle informatie kan inzien.
+          </td>
+          <td>Vanuit overzicht facilities (US 5) of per URL</td>
+        </tr>
+        <tr>
+          <td>7</td>
+          <td>
+            Als gebruiker wil ik zelf een facility kunnen toevoegen, zodat ik
+            mijn gebouwen kan bijhouden.
+          </td>
+          <td>-</td>
+        </tr>
+        <tr>
+          <td>8</td>
+          <td>
+            Als gebruiker wil ik mijn eigen facilities kunnen bewerken en
+            verwijderen, zodat ik mijn informatie up-to-date kan houden.
+          </td>
+          <td>Navigatie overzicht facilities of per URL</td>
         </tr>
       </tbody>
     </table>
