--- a/apps/iot-land/src/app/shared/navbar/navbar.component.html
+++ b/apps/iot-land/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light navbar-expand-lg">
   <div class="container-fluid">
-    <a class="navbar-brand" asp-controller="Home" asp-action="Index"
+    <a class="navbar-brand"
       ><img
         class="site-icon"
         src="../../assets/images/site-logo.png"
